Fixed scoring issue

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             <div>
                 <div id="outer">
                     <div id="btnTarget"></div>
+                    <div id="notification">
+                        <h1 id="chosen"></h1>
+                    </div>
                 </div>
             </div>
             </div>
